# curve

./: CMakeLists.txt
src/: CMakeLists.txt  bitmask.h  callback.h  glad.c  main.cpp  memberlinkedlist.h  program.h  renderer.cpp  renderer.h  solidtriangleprogram.cpp  solidtriangleprogram.h  solidtrianglerenderer.cpp  solidtrianglerenderer.h  testitem.cpp  testitem.h  vao.h
src/glad/: glad.h
